manifests/minimal-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernates.io/rewrite-target: /
    kubernates.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - test.ulicode.com
    secretName: api-tls
  rules:
  - host: test.ulicode.com
    http:
       paths:
      # - path: /*
       - backend:
          serviceName: go-api
          servicePort: 8080
